completed all routes and swag
